Integrated Slick into the POC with Futures on the GET Request

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,17 @@
 akka {
   loglevel = INFO
+  event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
 }
 
 spray.can.server {
   request-timeout = 1s
+}
+
+db{
+  host="localhost"
+  port="3306"
+  name="lmsroster"
+  user="root"
+  password=null
+
 }
